{{$NEXT}}
    - Rearrange order of sub descriptions in the README
    - Add sub sort-list (from module Abbreviations)
      + add tests
    - Improve sub 'wrap-text' to use FontFactory
    - Use better returns at sub end (eliminate explicit 'return')

3.3.1  2023-01-04T11:25:21-06:00
    - Make 'normalize-string' and 'normalize-text' separate routines

3.3.0  2022-10-27T07:37:56-05:00
    - Correctly handle real numbers to preserve two decimal places
      since 'commify' as a default
    - Add option to specify number of decimal places to be shown

3.2.0  2022-09-17T18:27:09-05:00
    - Correct workflow/test.yml
    - Eliminate non-Linux testing for now
    - Correct Github support paths in META6.json file
    - Remove 'ask' which is now in its own module
    - Remove dependencies in 'test-depends' since it's now in workflows/test.yml

3.1.0  2022-08-22T18:02:43-05:00
    - Export 'ask' as an alias for routine 'prompt

3.0.6  2022-06-04T16:48:15-05:00
    - Update dependency on Font::AFM updated version
    - REALLY remove dependency on Test::META

3.0.5  2022-06-04T10:16:53-05:00
    - Remove dependency on Test::META

3.0.4  2022-01-12T21:19:25-06:00
    - Update minimum version required of Font::AFM

3.0.3  2021-12-10T18:36:51-06:00
    - Publish to Zef repository
    - add alias 'normalize-text' for 'normalize-string'
      + add test for the alias
    - add sub 'typeset-text' for the equivalent signature but
      deprecated multi subs 'wrap-text' and 'wrap-para'
      + the new sub has more named params
      + add test for 'typeset-text'
    - add alias 'typeset-string' for 'typeset-text'
      + add test for the alias
    - add alias 'typeset-line' for 'typeset-text'
      + add test for the alias
    - improve documentation
    - correct typos in docs

3.0.2  2021-01-28T18:15:26-06:00
    - add new multi sub 'wrap-text'
      + provides text wrapping for max line width
        for a PostScript or PDF font at
        a desired font size